fixed white space issue for about page for mobile page

--- a/about/_about.scss
+++ b/about/_about.scss
@@ -243,10 +243,14 @@ main .wrapper {
     height: 7.5vw;
   }
 
+  .about__text {
+    margin: 3rem 0;
+  }
+
   .about__bgCircle {
-    border-radius: 100% 0% 80% 80%/0% 0% 100% 100%;
-    height: 150%;
-    left: -50%;
+    border-radius: 100% 0% 200% 100%/0% 0% 100% 100%;
+    height: 200%;
+    left: -80%;
     top: -50%;
   }
 }
